<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/ic_store"
        android:id="@+id/icon_cost_of_service"
        app:srcCompat="@drawable/ic_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_of_service"
        app:layout_constraintBottom_toBottomOf="@id/cost_of_service"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_service_question"
        android:src="@drawable/ic_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/service_question"
        app:layout_constraintBottom_toBottomOf="@id/service_question"
        android:importantForAccessibility="no"/>


    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="@id/cost_of_service"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        />

    <RadioGroup
        android:id="@+id/tip_options"
        android:checkedButton="@id/option_amazing"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/service_question"
        app:layout_constraintStart_toStartOf="@id/service_question">

        <RadioButton
            android:id="@+id/option_amazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"/>

        <RadioButton
            android:id="@+id/option_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_18"/>

        <RadioButton
            android:id="@+id/option_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_15"/>

    </RadioGroup>

    <ImageView
        android:id="@+id/icon_shared_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_shared_bill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/shared_bill_tip"
        app:layout_constraintBottom_toBottomOf="@id/shared_bill_tip"
        android:importantForAccessibility="no"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/shared_bill_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/shared_bill_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/service_question"
        app:layout_constraintTop_toBottomOf="@id/tip_options"
        android:checked="false"
        />

    <ImageView
        android:id="@+id/icon_payer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/shared_bill_tip_number"
        app:layout_constraintBottom_toBottomOf="@id/shared_bill_tip_number"
        android:src="@drawable/ic_baseline_people_24"
        android:importantForAccessibility="no"
        android:visibility="gone"
       />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shared_bill_tip_number"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_payers"
        app:layout_constraintStart_toStartOf="@id/cost_of_service"
        app:layout_constraintTop_toBottomOf="@id/shared_bill_tip"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:visibility="gone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shared_bill_tip_number_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:visibility="gone"
          />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_switch_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/switch_tip"
        app:layout_constraintBottom_toBottomOf="@id/switch_tip"
        android:importantForAccessibility="no"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/service_question"
        app:layout_constraintTop_toBottomOf="@id/shared_bill_tip_number"
        android:checked="true"
         />

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/icon_switch_tip"
        app:layout_constraintTop_toBottomOf="@id/switch_tip"
        app:layout_constraintEnd_toEndOf="@id/switch_tip"
        android:text="@string/calculate" />
    
    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/calculate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/result_text_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/result_text"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/result_tip_per_payer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/result_text_total"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/result_total_per_payer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/result_tip_per_payer"
        app:layout_constraintEnd_toEndOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>